# camerastream

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/camerastream/: MainActivity.kt
android/app/src/main/kotlin/io/github/nortio/camerastream/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  outline_camera_video_24.xml
lib/: bench.dart  benchapp.dart  main.dart  model.dart  utils.dart
plugins/quickjpeg/: .gitignore  .metadata  README.md  ffigen.sh  ffigen.yaml  pubspec.yaml  shell.nix
plugins/quickjpeg/android/: build.gradle  settings.gradle
plugins/quickjpeg/android/src/main/: AndroidManifest.xml
plugins/quickjpeg/example/: README.md  pubspec.yaml
plugins/quickjpeg/example/android/app/: build.gradle.kts
plugins/quickjpeg/example/android/app/src/main/: AndroidManifest.xml
plugins/quickjpeg/example/android/app/src/main/kotlin/com/example/quickjpeg_example/: MainActivity.kt
plugins/quickjpeg/example/lib/: main.dart
plugins/quickjpeg/example/linux/: CMakeLists.txt
plugins/quickjpeg/example/linux/flutter/: generated_plugins.cmake
plugins/quickjpeg/example/linux/runner/: my_application.cc
plugins/quickjpeg/lib/: box.dart  quickjpeg.dart  quickjpeg_bindings_generated.dart
plugins/quickjpeg/linux/: CMakeLists.txt
plugins/quickjpeg/src/: CMakeLists.txt  defines.h  log.c  log.h  quickjpeg.c  quickjpeg.h  test.c
test/: widget_test.dart
